fix statistic api, add event statistic
